--- a/hw3/package.json
+++ b/hw3/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/node": "^20",
