--- a/nf-hw-backend-1/package.json
+++ b/nf-hw-backend-1/package.json
@@ -33,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^20.14.2",
     "@types/passport": "^1.0.16",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
